<resources>
    <string name="app_name">Tesla Geek</string>
    <string name="textTeslaS">Model S</string>
    <string name="textTesla3">Model 3</string>
    <string name="textTeslaX">Model X</string>
    <string name="textTeslaY">Model Y</string>
    <string name="textZagolovok">Модельный ряд автомобилей Tesla</string>
    <string name="textTypeStandard">Standard Plus</string>
    <string name="textTypeLongRange">Long Range</string>
    <string name="textTypePerformance">Performance</string>
    <string name="textTypePlaid">Plaid</string>
    <string name="white">Pearl White Multi-Coat</string>
    <string name="grey">Midnight Silver Metallic</string>
    <string name="blue">Deep Blue Metallic</string>
    <string name="black">Solid Black</string>
    <string name="red">Red Multi-Coat</string>
    <string name="textPaint">Цвет кузова</string>
    <string name="textWheels">Дизайн дисков</string>
    <string name="wheels_Model_3_18">18r Aero Wheels</string>
    <string name="wheels_Model_3_19">19r Sport Wheels</string>
    <string name="wheels_Model_3_20">20r Überturbine Wheels</string>
    <string name="wheels_Model_S_19">19r Tempest Wheels</string>
    <string name="wheels_Model_S_21">21r Arachnid Wheels</string>
    <string name="wheels_Model_X_20">20r Cyberstream Wheels</string>
    <string name="wheels_Model_X_22">22r Turbine Wheels</string>
    <string name="wheels_Model_Y_19">19r Gemini Wheels</string>
    <string name="wheels_Model_Y_20">20r Induction Wheels</string>
    <string name="wheels_Model_Y_21">21r Überturbine Wheels</string>
    <string name="textInHeader">Выбранная комлектация</string>

</resources>