<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayoutId"
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <ImageView
            android:id="@+id/imageLogoTesla"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logo" />

    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/textZagolovok"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTeslaS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTeslaS"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageTeslaS"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTesla3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTesla3"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageTesla3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTeslaX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTeslaX"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeslaS"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/textViewTeslaY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTeslaY"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTesla3"
            app:layout_constraintVertical_bias="0.636" />

        <ImageView
            android:id="@+id/imageTeslaS"
            android:layout_width="180dp"
            android:layout_height="101.25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/teslasred2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <ImageView
            android:id="@+id/imageTesla3"
            android:layout_width="180dp"
            android:layout_height="101.25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/tesla3black2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <ImageView
            android:id="@+id/imageTeslaX"
            android:layout_width="180dp"
            android:layout_height="101.25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/teslaxwhite2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.645" />

        <ImageView
            android:id="@+id/imageTeslaY"
            android:layout_width="180dp"
            android:layout_height="101.25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/teslayblue2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.645" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>