<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WheelsAndColorScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".WheelsAndColorActivity">

    <TextView
        android:id="@+id/teslaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/teslafont"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:text="@string/textTesla3" />

    <TextView
        android:id="@+id/teslaType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/teslafont"
        android:gravity="right"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teslaName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:text="@string/textTypeStandard" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/teslaImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:src="@drawable/tesla_3_white_2" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPaint"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/colorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/white"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/white"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/grey"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/blue"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/black"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/red"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="185dp"
        android:text="@string/textWheels"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/wheelName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wheel1"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="10dp"
            tools:background="@drawable/wheels_model_3_18r" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wheel2"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="10dp"
            tools:background="@drawable/wheels_model_3_19r" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wheel3"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="10dp"
            tools:background="@drawable/wheels_model_3_20r" />

    </LinearLayout>

    <TextView
        android:id="@+id/wheelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/wheels_Model_3_19" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arrowNext"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.942" />

</androidx.constraintlayout.widget.ConstraintLayout>